<resources>
    <string name="app_name">Popular Movies Stage 1</string>
    <string name="movie_list_item_poster_description">Movie Poster</string>
    <string name="movie_title_default_text">Default Title</string>
    <string name="movie_detail_synopsis_label">Synopsis:</string>
    <string name="movie_detail_release_date_label">Release Date:</string>
    <string name="movie_detail_rating_label">Rating:</string>

    <!-- Stuff used for Preferences-->
    <string name="pref_menubutton_title">Preferences</string>
    <string name="pref_sort_order_key">pref_sort_order_key</string>
    <string name="pref_sort_order_title">Sorting Order (from source)</string>
    <string name="pref_sort_order_popular">popular</string>
    <string name="pref_sort_order_top_rated">top_rated</string>
    <string name="pref_sort_order_popular_value">Popular</string>
    <string name="pref_sort_order_top_rated_value">Top Rated</string>
</resources>
