<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_movie_detail_poster"
            android:contentDescription="@string/movie_list_item_poster_description"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/MovieSpacingSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <View
            android:layout_marginTop="@dimen/MovieSpacingSmall"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/tv_movie_detail_title"
            android:layout_marginTop="@dimen/MovieSpacing"
            android:textSize="@dimen/MovieTextLarge"
            android:text="@string/movie_title_default_text"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_movie_detail_synopsis_label"
            android:layout_marginTop="@dimen/MovieSpacing"
            android:textSize="@dimen/MovieTextMedium"
            android:textStyle="bold"
            android:text="@string/movie_detail_synopsis_label"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_movie_detail_synopsis"
            android:layout_marginTop="@dimen/MovieSpacingSmall"
            android:textSize="@dimen/MovieTextMedium"
            android:text="@string/movie_title_default_text"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_movie_detail_release_date_label"
            android:layout_marginTop="@dimen/MovieSpacing"
            android:textSize="@dimen/MovieTextMedium"
            android:textStyle="bold"
            android:text="@string/movie_detail_release_date_label"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_movie_detail_release_date"
            android:layout_marginTop="@dimen/MovieSpacingSmall"
            android:textSize="@dimen/MovieTextMedium"
            android:text="@string/movie_title_default_text"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_movie_detail_rating_label"
            android:layout_marginTop="@dimen/MovieSpacing"
            android:textSize="@dimen/MovieTextMedium"
            android:textStyle="bold"
            android:text="@string/movie_detail_rating_label"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_movie_detail_rating"
            android:layout_marginTop="@dimen/MovieSpacingSmall"
            android:textSize="@dimen/MovieTextMedium"
            android:text="@string/movie_title_default_text"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>